# ShaderToy

./: .gitignore  CMakeLists.txt  ShaderToy
ShaderToy/: ShaderToy.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt
include/: TextEditor.cpp  TextEditor.h  openglDebug.h  shaderLoader.h
resources/: fragment.frag  vertex.vert
src/: CMakeLists.txt  ShaderToy.cpp  ShaderToy.h  openglDebug.cpp  shaderLoader.cpp
